[gd_scene load_steps=5 format=1]

[ext_resource path="res://chapters/chapter_11/telling_a_story.gd" type="Script" id=1]
[ext_resource path="res://chapters/chapter_01/multiple_choice.gd" type="Script" id=2]
[ext_resource path="res://fonts/french_neat.fnt" type="BitmapFont" id=3]
[ext_resource path="res://chapters/chapter_01/Pointer.png" type="Texture" id=4]

[node name="world" type="Node2D"]

[node name="PopupPanel" type="PopupPanel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 352.0
margin/bottom = 257.0
popup/exclusive = false
script/script = ExtResource( 1 )

[node name="multiple_choice_1" type="PopupDialog" parent="PopupPanel"]

editor/display_folded = true
visibility/visible = false
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 32.0
margin/right = 560.0
margin/bottom = 256.0
popup/exclusive = false
script/script = ExtResource( 2 )

[node name="option1" type="Label" parent="PopupPanel/multiple_choice_1"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 34.0
margin/top = 72.0
margin/right = 508.0
margin/bottom = 103.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "a. She needed to bring out the trash."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option2" type="Label" parent="PopupPanel/multiple_choice_1"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 102.0
margin/right = 684.0
margin/bottom = 133.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "b. It was an easy route to her grandmother’s house."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option3" type="Label" parent="PopupPanel/multiple_choice_1"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 134.0
margin/right = 506.0
margin/bottom = 165.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "c. She heard a noise."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option4" type="Label" parent="PopupPanel/multiple_choice_1"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 166.0
margin/right = 543.0
margin/bottom = 197.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "d. She wanted to hide from her parents."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pointer" type="Sprite" parent="PopupPanel/multiple_choice_1"]

transform/pos = Vector2( 23.5, 80 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
hframes = 14

[node name="RichTextLabel" type="RichTextLabel" parent="PopupPanel/multiple_choice_1"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = 24.0
margin/right = 818.0
margin/bottom = 95.0
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode/enabled = false
bbcode/bbcode = "Pourquoi est-ce que MT est allée dans la ruelle ?"
visible_characters = -1

[node name="multiple_choice_2" type="PopupDialog" parent="PopupPanel"]

editor/display_folded = true
visibility/visible = false
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 32.0
margin/right = 608.0
margin/bottom = 256.0
popup/exclusive = false
script/script = ExtResource( 2 )

[node name="option1" type="Label" parent="PopupPanel/multiple_choice_2"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 34.0
margin/top = 72.0
margin/right = 508.0
margin/bottom = 103.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "a. Marie-Therese"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option2" type="Label" parent="PopupPanel/multiple_choice_2"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 102.0
margin/right = 684.0
margin/bottom = 133.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "b.  A group of teenagers"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option3" type="Label" parent="PopupPanel/multiple_choice_2"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 134.0
margin/right = 506.0
margin/bottom = 165.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "c. The dog"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option4" type="Label" parent="PopupPanel/multiple_choice_2"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 166.0
margin/right = 543.0
margin/bottom = 197.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "d. M. Laroux"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pointer" type="Sprite" parent="PopupPanel/multiple_choice_2"]

transform/pos = Vector2( 23.5, 80 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
hframes = 14

[node name="RichTextLabel" type="RichTextLabel" parent="PopupPanel/multiple_choice_2"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = 24.0
margin/right = 818.0
margin/bottom = 95.0
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode/enabled = false
bbcode/bbcode = "Qui était le coupable dans le cas du cambriolage du gâteau ?"
visible_characters = -1

[node name="multiple_choice_3" type="PopupDialog" parent="PopupPanel"]

editor/display_folded = true
visibility/visible = false
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 32.0
margin/right = 560.0
margin/bottom = 256.0
popup/exclusive = false
script/script = ExtResource( 2 )

[node name="option1" type="Label" parent="PopupPanel/multiple_choice_3"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 34.0
margin/top = 72.0
margin/right = 508.0
margin/bottom = 103.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "a. Leave the scene quietly"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option2" type="Label" parent="PopupPanel/multiple_choice_3"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 102.0
margin/right = 684.0
margin/bottom = 133.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "b. Inform M. Laroux what happened"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option3" type="Label" parent="PopupPanel/multiple_choice_3"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 134.0
margin/right = 506.0
margin/bottom = 165.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "c. Run after the dog"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option4" type="Label" parent="PopupPanel/multiple_choice_3"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 166.0
margin/right = 543.0
margin/bottom = 197.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "d. Bake a cake"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pointer" type="Sprite" parent="PopupPanel/multiple_choice_3"]

transform/pos = Vector2( 23.5, 80 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
hframes = 14

[node name="RichTextLabel" type="RichTextLabel" parent="PopupPanel/multiple_choice_3"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = 24.0
margin/right = 818.0
margin/bottom = 95.0
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode/enabled = false
bbcode/bbcode = "Qu’est-ce que Marie-Thérèse doit faire ?"
visible_characters = -1


